--- a/style.css
+++ b/style.css
@@ -1,6 +1,29 @@
+:root {
+  --bs-body-font-size: 0.8rem;
+}
+
+h2 {
+  margin-block-start: 0.3em;
+  margin-block-end: 0.3em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
 .navbar {
-  padding: 2rem;
+  padding: 0.5rem 0.1rem;
   --bs-navbar-nav-link-padding-x: 0.7rem;
+  --bs-navbar-brand-padding-y: 0.15rem;
+  --bs-navbar-toggler-padding-y: 0.15rem;
+  --bs-navbar-toggler-padding-x: 0.55rem;
+  --bs-navbar-toggler-font-size: 1rem;
+}
+
+.form-control {
+  font-size: 0.8rem;
+}
+
+.btn {
+  --bs-btn-font-size: 0.8rem;
 }
 
 .btn-outline-success {
@@ -18,6 +41,10 @@
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #19110b;
   --bs-gradient: none;
+}
+
+p {
+  font-size: 1rem;
 }
 
 .card:hover {
